feat: fork Discable → Mobium, rebrand + landing page + nginx config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ resolver = "2"
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
-authors = ["SecureComm Contributors"]
+authors = ["Mobium Contributors"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/securecomm/securecomm"
+repository = "https://github.com/mobium/mobium"
 
 [workspace.dependencies]
 tokio = { version = "1", features = ["full"] }
