--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-# Discable Server Configuration
+# Mobium Server Configuration
 # Copy this file to .env and configure as needed.
 # All values shown are defaults (except commented-out lines).
 
 # ── Core ──────────────────────────────────────────────────
 SC_HOST=0.0.0.0
 SC_PORT=8443
-SC_DATABASE_URL=sqlite://./data/securecomm.db
+SC_DATABASE_URL=sqlite://./data/mobium.db
 
 # ── TLS ───────────────────────────────────────────────────
 # For production, provide a certificate and key:
@@ -50,4 +50,4 @@ SC_WS_PING_INTERVAL=30
 # SC_ICE_TTL=86400
 
 # ── Logging ───────────────────────────────────────────────
-RUST_LOG=securecomm_server=debug,axum=info
+RUST_LOG=mobium_server=debug,axum=info
