--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "securecomm-shared"
+name = "mobium-shared"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
