feat: server-provided ICE config (STUN/TURN with HMAC credentials), remove hardcoded Google STUN

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -65,6 +65,9 @@ dashmap = "5"
 hex = "0.4"
 rand = "0.8"
 subtle = "2"
+hmac = "0.12"
+sha1 = "0.10"
+base64 = "0.22"
 
 # Memory allocator — jemalloc reduces fragmentation and improves throughput
 # on long-running server processes. Linux-only (glibc/musl); the default
