--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -11,27 +12,38 @@ permissions:
 jobs:
   build-server:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
             artifact: mobium-server-linux-x86_64
           - os: ubuntu-24.04-arm
-            target: aarch64-unknown-linux-gnu
             artifact: mobium-server-linux-aarch64
 
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ runner.arch }}-cargo-server-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Build server
         run: cargo build --release -p mobium-server
+
       - name: Package
         run: |
           mkdir -p dist
           cp target/release/mobium-server dist/${{ matrix.artifact }}
           cp .env.example dist/
           cd dist && tar czf ${{ matrix.artifact }}.tar.gz ${{ matrix.artifact }} .env.example
+
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact }}
@@ -39,20 +51,21 @@ jobs:
 
   build-client:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
             target: linux
-            artifact: mobium-client-linux-x86_64
+            artifact: Mobium-linux-x86_64
           - os: windows-latest
             target: windows
-            artifact: mobium-client-windows-x86_64
+            artifact: Mobium-windows-x86_64
           - os: macos-latest
-            target: macos
-            artifact: mobium-client-macos-aarch64
+            target: macos-arm
+            artifact: Mobium-macos-aarch64
           - os: macos-13
-            target: macos
-            artifact: mobium-client-macos-x86_64
+            target: macos-intel
+            artifact: Mobium-macos-x86_64
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -61,6 +74,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: client/package-lock.json
+
+      - name: Cache cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ runner.arch }}-cargo-client-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install Linux deps
         if: matrix.target == 'linux'
@@ -75,49 +99,85 @@ jobs:
       - name: Build Tauri app
         working-directory: client
         run: npx tauri build
+        env:
+          CI: true
 
+      # Linux: .deb + .AppImage
       - name: Collect Linux artifacts
         if: matrix.target == 'linux'
         run: |
           mkdir -p dist
-          cp client/src-tauri/target/release/bundle/deb/*.deb dist/${{ matrix.artifact }}.deb 2>/dev/null || true
-          cp client/src-tauri/target/release/bundle/appimage/*.AppImage dist/${{ matrix.artifact }}.AppImage 2>/dev/null || true
+          find target/release/bundle -name "*.deb" -exec cp {} dist/${{ matrix.artifact }}.deb \; 2>/dev/null || true
+          find target/release/bundle -name "*.AppImage" -exec cp {} dist/${{ matrix.artifact }}.AppImage \; 2>/dev/null || true
 
+      # Windows: .msi + NSIS .exe
       - name: Collect Windows artifacts
         if: matrix.target == 'windows'
         shell: bash
         run: |
           mkdir -p dist
-          cp client/src-tauri/target/release/bundle/msi/*.msi dist/${{ matrix.artifact }}.msi 2>/dev/null || true
-          cp client/src-tauri/target/release/bundle/nsis/*.exe dist/${{ matrix.artifact }}-setup.exe 2>/dev/null || true
+          find target/release/bundle -name "*.msi" -exec cp {} dist/${{ matrix.artifact }}.msi \; 2>/dev/null || true
+          find target/release/bundle -name "*.exe" -exec cp {} dist/${{ matrix.artifact }}-setup.exe \; 2>/dev/null || true
 
+      # macOS: .dmg
       - name: Collect macOS artifacts
-        if: matrix.target == 'macos'
+        if: startsWith(matrix.target, 'macos')
         run: |
           mkdir -p dist
-          cp client/src-tauri/target/release/bundle/dmg/*.dmg dist/${{ matrix.artifact }}.dmg 2>/dev/null || true
+          find target/release/bundle -name "*.dmg" -exec cp {} dist/${{ matrix.artifact }}.dmg \; 2>/dev/null || true
+
+      - name: List dist
+        run: ls -lh dist/ || echo "No artifacts"
 
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact }}
           path: dist/*
+          if-no-files-found: warn
 
   release:
     needs: [build-server, build-client]
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
         with:
           path: artifacts
-          merge-multiple: true
 
-      - name: List artifacts
-        run: find artifacts -type f | head -20
+      - name: Flatten artifacts
+        run: |
+          mkdir -p release
+          find artifacts -type f \( -name "*.tar.gz" -o -name "*.deb" -o -name "*.AppImage" -o -name "*.msi" -o -name "*.exe" -o -name "*.dmg" \) -exec cp {} release/ \;
+          ls -lh release/
 
       - uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*
+          files: release/*
           generate_release_notes: true
           draft: false
+          body: |
+            ## Mobium ${{ github.ref_name }}
+
+            ### Client Downloads
+            | Platform | File |
+            |----------|------|
+            | Linux x86_64 | `.deb` / `.AppImage` |
+            | Windows x86_64 | `.msi` / `-setup.exe` |
+            | macOS Apple Silicon | `.dmg` |
+            | macOS Intel | `.dmg` |
+
+            ### Server
+            | Platform | File |
+            |----------|------|
+            | Linux x86_64 | `mobium-server-linux-x86_64.tar.gz` |
+            | Linux ARM64 | `mobium-server-linux-aarch64.tar.gz` |
+
+            ### Self-Host
+            ```bash
+            tar xzf mobium-server-linux-*.tar.gz
+            cp .env.example .env
+            mkdir -p data
+            ./mobium-server-linux-*
+            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
