--- a/client/src-tauri/Cargo.toml
+++ b/client/src-tauri/Cargo.toml
@@ -37,6 +37,10 @@ futures = "0.3"
 url = "2"
 rmp-serde = "1"
 
+# Tor (Arti) — optional, enabled by default
+arti-client = { version = "0.22", features = ["tokio", "native-tls"], optional = true }
+tor-rtcompat = { version = "0.22", features = ["tokio", "native-tls"], optional = true }
+
 # Crypto (used directly by db_crypto / db)
 aes-gcm = { version = "0.10", features = ["std"] }
 hmac = { version = "0.12", features = ["std"] }
@@ -50,6 +54,10 @@ once_cell = "1"
 hex = "0.4"
 sha2 = "0.10"
 rand = "0.8"
+
+[features]
+default = ["tor"]
+tor = ["dep:arti-client", "dep:tor-rtcompat"]
 
 [[bin]]
 name = "mobium-client"
